gcc/testsuite/gdc.test/compilable/imports/test15857b.d
void bar15857(int) {}
