gcc/testsuite/gdc.test/fail_compilation/imports/fail320a.d
void foo(int) { }
void foo(bool) { }
